--- a/MyLab/pro/xTest/xTest.vcxproj.filters
+++ b/MyLab/pro/xTest/xTest.vcxproj.filters
@@ -365,6 +365,9 @@
     <ClCompile Include="test_battle\test_battle_RoleAdvance.cpp">
       <Filter>test_battle\role</Filter>
     </ClCompile>
+    <ClCompile Include="test1017_yh.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ResourceCompile Include="xTest.rc">
